Update Header.vue layout and improve title bar button styling

--- a/src/style/style.css
+++ b/src/style/style.css
@@ -14,8 +14,9 @@
 }
 
 .titleBarButtonSelected {
-    border-bottom-style: solid ;
-    border-color: #cf491b;
+    color: red;
+    border-bottom-style: solid !important;
+    border-color: #cf491b!important;
 }
 
 .filAriane {
