Fix v-checkbox to density compact Fix Bottom datatable to vue3 AND fix mobile Layout

--- a/src/style/style.css
+++ b/src/style/style.css
@@ -211,3 +211,7 @@
 .tooltip:hover .tooltiptext {
     visibility: visible;
 }
+
+.v-checkbox .v-selection-control {
+    min-height: auto !important;
+}
